Add smileys to introduction

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <div class="card-white">
         <h1>Hey, I'm Max</h1>
         <img src="images/profile-pic.png" alt="My profile picture" class = "img-circle">
-        <p>I'm passionate about web development (Ruby, HTML, CSS, JS),
-          game development, and exploring strategic games like chess.
-          I have a deep interest in law, like going to music festivals,
-          and am captivated by the language, culture, and landscapes of Japan.
-          In my downtime, you'll find me enjoying video games, movies,
+        <p>I'm passionate about web development (Ruby, HTML, CSS, JS) 💻,
+          game development 🎮, and exploring strategic games like chess ♟️.
+          I have a keen interest in law ⚖️, love going to music festivals 🎶,
+          and am captivated by Japan's language, culture, and landscapes 🗻🌸.
+          In my downtime, you’ll often find me enjoying video games, movies,
           and TV series 🎮🎬.
          </p>
-        <a href="https://www.youtube.com/watch?v=UDJtsfR51To&ab_channel=XenobladeChroniclesOST" target="_blank" class="btn-blue">D0 N0T CLICK ME!</a>
+        <a href="https://www.youtube.com/watch?v=UDJtsfR51To&ab_channel=XenobladeChroniclesOST" target="_blank" class="btn-blue">🚨 ALERT! DO NOT CLICK! 🚨</a>
       </div>
 
       <div class="card-white">
