--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           In my downtime, you’ll often find me enjoying video games, movies,
           and TV series 🎮🎬.
          </p>
-        <a href="https://www.youtube.com/watch?v=UDJtsfR51To&ab_channel=XenobladeChroniclesOST" target="_blank" class="btn-blue">🚨 ALERT! DO NOT CLICK! 🚨</a>
+        <a href="https://www.youtube.com/watch?v=UDJtsfR51To&ab_channel=XenobladeChroniclesOST" target="_blank" class="btn-blue">🚨 DØ N0T CL1CK! 🚨</a>
       </div>
 
       <div class="card-white">
